--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -127,6 +127,7 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
+allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -1005,9 +1006,8 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
-allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1026,7 +1026,6 @@ allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.254;
@@ -1619,6 +1618,7 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1850,6 +1850,7 @@ allow 5.181.80.107;
 allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
+allow 52.195.190.108;
 allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.100.26;
