--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -127,6 +127,7 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
+deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -1005,9 +1006,8 @@ deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
+deny 23.154.177.12;
 deny 23.154.177.13;
-deny 23.154.177.14;
-deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
 deny 23.154.177.18;
@@ -1026,7 +1026,6 @@ deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.154.177.7;
 deny 23.154.177.8;
-deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.254;
@@ -1619,6 +1618,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1850,6 +1850,7 @@ deny 5.181.80.107;
 deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
+deny 52.195.190.108;
 deny 5.255.100.219;
 deny 5.255.100.227;
 deny 5.255.100.26;
