--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -127,6 +127,7 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
+allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -153,7 +154,6 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.226.2.22;
-allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -1003,6 +1003,7 @@ allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
+allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -1602,6 +1603,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1616,6 +1618,7 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1741,6 +1744,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1877,7 +1881,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.95.86.65;
 allow 57.128.164.66;
 allow 5.79.66.19;
 allow 62.133.45.2;
