--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -8,6 +8,7 @@ allow 102.211.56.250;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.146.203.11;
+allow 103.163.218.11;
 allow 103.164.54.199;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -152,6 +153,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.226.2.22;
+allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -248,11 +250,6 @@ allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.134.61;
-allow 176.65.137.113;
-allow 176.65.137.142;
-allow 176.65.137.39;
-allow 176.65.137.42;
-allow 176.65.137.51;
 allow 176.65.144.142;
 allow 176.65.144.94;
 allow 176.97.114.202;
@@ -332,6 +329,7 @@ allow 185.153.197.227;
 allow 185.153.198.104;
 allow 185.154.110.142;
 allow 185.154.110.17;
+allow 185.158.249.155;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -1005,6 +1003,7 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1025,6 +1024,7 @@ allow 23.154.177.31;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1065,6 +1065,7 @@ allow 2600:3c09::f03c:95ff:fe2d:cc40;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:f704:10::1;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
@@ -1402,6 +1403,8 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:7140:1:1:5054:ff:fe12:2305;
+allow 2a0b:7140:6:1:5054:ff:fed8:5956;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1598,6 +1601,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1730,6 +1734,7 @@ allow 38.242.254.131;
 allow 38.75.136.144;
 allow 38.97.116.244;
 allow 40.160.3.1;
+allow 45.11.183.87;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1737,6 +1742,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1749,7 +1755,6 @@ allow 45.138.16.248;
 allow 45.138.16.42;
 allow 45.138.16.70;
 allow 45.138.16.76;
-allow 45.138.87.142;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
