--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -8,6 +8,7 @@ deny 102.211.56.250;
 deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.146.203.11;
+deny 103.163.218.11;
 deny 103.164.54.199;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -152,6 +153,7 @@ deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
 deny 131.226.2.22;
+deny 135.225.96.187;
 deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
@@ -248,11 +250,6 @@ deny 176.121.81.51;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.65.134.61;
-deny 176.65.137.113;
-deny 176.65.137.142;
-deny 176.65.137.39;
-deny 176.65.137.42;
-deny 176.65.137.51;
 deny 176.65.144.142;
 deny 176.65.144.94;
 deny 176.97.114.202;
@@ -332,6 +329,7 @@ deny 185.153.197.227;
 deny 185.153.198.104;
 deny 185.154.110.142;
 deny 185.154.110.17;
+deny 185.158.249.155;
 deny 185.165.169.239;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -1005,6 +1003,7 @@ deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
+deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -1025,6 +1024,7 @@ deny 23.154.177.31;
 deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
+deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.254;
 deny 23.184.48.78;
@@ -1065,6 +1065,7 @@ deny 2600:3c09::f03c:95ff:fe2d:cc40;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:f704:10::1;
 deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
@@ -1402,6 +1403,8 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:7140:1:1:5054:ff:fe12:2305;
+deny 2a0b:7140:6:1:5054:ff:fed8:5956;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1598,6 +1601,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1730,6 +1734,7 @@ deny 38.242.254.131;
 deny 38.75.136.144;
 deny 38.97.116.244;
 deny 40.160.3.1;
+deny 45.11.183.87;
 deny 45.11.229.132;
 deny 45.11.59.28;
 deny 45.118.133.44;
@@ -1737,6 +1742,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1749,7 +1755,6 @@ deny 45.138.16.248;
 deny 45.138.16.42;
 deny 45.138.16.70;
 deny 45.138.16.76;
-deny 45.138.87.142;
 deny 45.141.215.110;
 deny 45.141.215.111;
 deny 45.141.215.114;
