--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -127,6 +127,7 @@ set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
 set_real_ip_from 109.228.160.190;
+set_real_ip_from 109.248.11.6;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -712,7 +713,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.144.178.185;
 set_real_ip_from 198.144.178.187;
-set_real_ip_from 198.167.206.139;
+set_real_ip_from 198.167.206.232;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -964,7 +965,6 @@ set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
-set_real_ip_from 209.135.168.90;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.34.15;
@@ -1069,7 +1069,6 @@ set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f704:10::1;
-set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
@@ -1269,6 +1268,7 @@ set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
+set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1362,7 +1362,6 @@ set_real_ip_from 2a04:52c0:119:3f0b::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
-set_real_ip_from 2a04:52c0:130:7025::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
@@ -1603,7 +1602,6 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1618,6 +1616,7 @@ set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0d:c580:1:3:95::1;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1744,7 +1743,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
@@ -1757,6 +1755,7 @@ set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.70;
 set_real_ip_from 45.138.16.76;
+set_real_ip_from 45.138.87.142;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
@@ -1862,7 +1861,6 @@ set_real_ip_from 5.255.121.71;
 set_real_ip_from 5.255.123.158;
 set_real_ip_from 5.255.123.164;
 set_real_ip_from 5.255.125.196;
-set_real_ip_from 5.255.125.252;
 set_real_ip_from 5.255.127.222;
 set_real_ip_from 5.255.97.221;
 set_real_ip_from 5.255.98.151;
@@ -1936,6 +1934,7 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.151.117.146;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
